classDiagram
  class AzureBlobWriter {
    \_\_init\_\_(account_url: str, container_name: str, prefix: str, connection_string: str | None, credential: TokenCredential | None, client_options: AzureBlobClientOptions | None)
    write(container: DataContainer, file_name: str, compression: CompressionType, compression_opts: int | None)
  }
  style AzureBlobWriter fill:#77AADD
  class BaseWriter {
    backend : BaseBackend
    \_\_init\_\_()
    process_parallel(reader: BaseReader, keep_file_names: bool, file_name_pattern: str, compression: CompressionType, compression_opts: int | None, num_workers: int | None)
    write(container: DataContainer, file_name: str, compression: CompressionType, compression_opts: int | None)*
  }
  style BaseWriter fill:#77AADD
  class LocalWriter {
    \_\_init\_\_(destination_folder: str)
    write(container: DataContainer, file_name: str, compression: CompressionType, compression_opts: int | None)
  }
  style LocalWriter fill:#77AADD
  class S3Writer {
    \_\_init\_\_(bucket: str, prefix: str, region_name: str | None, profile_name: str | None, client_options: S3ClientOptions | None)
    write(container: DataContainer, file_name: str, compression: CompressionType, compression_opts: int | None)
  }
  style S3Writer fill:#77AADD
  AzureBlobWriter --|> BaseWriter
  LocalWriter --|> BaseWriter
  S3Writer --|> BaseWriter
